# jai-lsp

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  build.jai  package.jai
emacs/: README.md  jai-lsp.el
nvim/: README.md
nvim/ftdetect/: jai.lua
nvim/lua/jai-lsp/: init.lua
src/: analysis.jai  checker.jai  documents.jai  log.jai  main.jai  platform.jai  protocol.jai  rpc.jai  server.jai  workspace.jai
test/: smoke.ts
tree-sitter-jai/: README.md  grammar_test.jai  package-lock.json  tree-sitter.json
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: jai.tmLanguage.json
zed-extension/: Cargo.toml  README.md  extension.toml
zed-extension/languages/jai/: config.toml  highlights.scm  indents.scm
zed-extension/src/: lib.rs
